<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/btnStartListen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStart" />
    
    <Button
        android:id="@+id/btnPauseListen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPause"/>
    
    <Button 
        android:id="@+id/btnStopListen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStop"
        android:enabled="false" />
    
    <TextView
        android:id="@+id/tvDistanceString"
        android:text="@string/tvDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tvTimeString"
        android:text="@string/tvTimeFromStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tvLastLatitudeString"
        android:text="@string/tvLastLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tvLastLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tvLastLongitudeString"
        android:text="@string/tvLastLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tvLastLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>